Corregidas todas las violaciones